refactoring: first version of fake processing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(${INCLUDE_DIRECTORIES})
 
 set(GCodeProcessor_SOURCES
     CommandLineArguments.cpp
+    GCodeLineEntry.cpp
     GCodeLineEntryStack.cpp
     GCodeProcessor.cpp
     InputFileIterator.cpp
